--- a/src/WebChannel/main/webapp/xpedx/css/global/IE.css
+++ b/src/WebChannel/main/webapp/xpedx/css/global/IE.css
@@ -117,7 +117,7 @@ input#newSearch_searchTerm {
 }
 
 .searchbox-1 .searchButton {
-    top: 0px; /* jira 3826 */
+    top: -3px; /* jira 3826 */
     margin-left: 3px;
     height: 30px;
 }
